--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
     "lucide-react": "^0.468.0",
-    "@google/genai": "^0.21.0"
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
