--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "automatch-platform",
   "version": "1.0.0",
   "description": "AutoMatch - Marketplace de Leads Automotivos",
-  "main": "index.tsx",
+  "private": true,
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,11 +11,7 @@
     "lucide-react": "^0.468.0",
     "@google/genai": "latest"
   },
-  "devDependencies": {
-    "typescript": "^5.0.0"
-  },
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'No build step required for ES modules'"
+    "start": "serve ."
   }
 }
