--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 
 {
+  "version": 2,
+  "framework": null,
+  "installCommand": "npm install",
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
