feat: Migrate to Vite for improved build and development
Switches the project's build tool from a custom setup (implied by `serve .` and `package.json` scripts) to Vite. This includes:

-   Configuring Vite for development (`dev`), building (`build`), and previewing (`preview`).
-   Setting up Vite with the React plugin.
-   Updating `index.html` to use Vite's module resolution and explicitly reference the React entry point (`index.tsx`).
-   Adjusting `vercel.json` to reflect Vite's output directory (`dist`).
-   Setting the development server port to 3000.

This migration aims to streamline the build process, enhance developer experience, and improve overall project performance.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "AutoMatch - Marketplace de Leads Automotivos",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,7 +12,14 @@
     "lucide-react": "^0.468.0",
     "@google/genai": "latest"
   },
+  "devDependencies": {
+    "vite": "^6.0.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2"
+  },
   "scripts": {
-    "start": "serve ."
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
