--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 
 {
   "version": 2,
-  "framework": null,
-  "installCommand": "npm install",
-  "build": {
-    "env": {
-      "NODE_VERSION": "20"
-    }
-  },
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
